# termsearch

./: Cargo.toml  README.md  termsearch.zsh
src/: history.rs  init.rs  logger.rs  main.rs  search.rs  ui.rs
